# sch16t-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  sch16t.ddsl
example/raspi/: Cargo.toml
example/raspi/src/: main.rs
example/rp2350/: Cargo.toml
example/rp2350/src/: main.rs
src/: fmt.rs  interface.rs  lib.rs  low_level.rs  uom_impl.rs
