[package]
name = "sch16t-example"
version = "0.1.0"
edition = "2024"

[dependencies]
sch16t-rs = { path = "../../", default-features = false, features = [
  "log",
  "uom",
] }
linux-embedded-hal = { version = "0.4", features = ["async-tokio"] }
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1"
embedded-hal = "1"
embedded-hal-async = "1"
env_logger = "0.11"
log = "0.4.29"
uom = { version = "0.38", features = ["si"] }
